// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select > passes through additional html attributes 1`] = `
<select
  data-passed-through="true"
  data-testid="AttributePassthrough"
  id="s0-select"
  type="number"
>
  <option
    selected=""
    text="Select an option"
    value=""
  >
    Select an option
  </option>
  <option
    text="option 1"
    value="option 1"
  >
    option 1
  </option>
  <option
    text="option 2"
    value="option 2"
  >
    option 2
  </option>
  <option
    text="option 3"
    value="option 3"
  >
    option 3
  </option>
</select>
`;

exports[`select > passes through additional html attributes 2`] = `
<span
  class="select class1"
  style="color:red"
>
  <select
    data-passed-through="true"
    data-testid="AttributePassthrough"
    id="s0-select"
    type="number"
  >
    <option
      selected=""
      text="Select an option"
      value=""
    >
      Select an option
    </option>
    <option
      text="option 1"
      value="option 1"
    >
      option 1
    </option>
    <option
      text="option 2"
      value="option 2"
    >
      option 2
    </option>
    <option
      text="option 3"
      value="option 3"
    >
      option 3
    </option>
  </select>
  <svg
    aria-hidden="true"
    class="icon icon--12"
    focusable="false"
  >
    <defs>
      <symbol
        id="icon-chevron-down-12"
        viewBox="0 0 12 12"
      >
        <path
          clip-rule="evenodd"
          d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
          fill-rule="evenodd"
        />
      </symbol>
    </defs>
    <use
      href="#icon-chevron-down-12"
    />
  </svg>
</span>
`;

exports[`select > renders a disabled input select with disabled floating label 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"floating-label"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label floating-label__label--disabled"[39m
      [33mfor[39m=[32m"s0-select"[39m
    [36m>[39m
      [0mOption[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"select"[39m
    [36m>[39m
      [36m<select[39m
        [33mdisabled[39m=[32m""[39m
        [33mid[39m=[32m"s0-select"[39m
      [36m>[39m
        [36m<option[39m
          [33mselected[39m=[32m""[39m
          [33mtext[39m=[32m"Select an option"[39m
          [33mvalue[39m=[32m""[39m
        [36m>[39m
          [0mSelect an option[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 1"[39m
          [33mvalue[39m=[32m"option 1"[39m
        [36m>[39m
          [0moption 1[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 2"[39m
          [33mvalue[39m=[32m"option 2"[39m
        [36m>[39m
          [0moption 2[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 3"[39m
          [33mvalue[39m=[32m"option 3"[39m
        [36m>[39m
          [0moption 3[0m
        [36m</option>[39m
      [36m</select>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`select > renders an input select with inline floating label 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"floating-label"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label"[39m
      [33mfor[39m=[32m"s0-select"[39m
    [36m>[39m
      [0mOption[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"select"[39m
    [36m>[39m
      [36m<select[39m
        [33mid[39m=[32m"s0-select"[39m
      [36m>[39m
        [36m<option[39m
          [33mselected[39m=[32m""[39m
          [33mtext[39m=[32m"Select an option"[39m
          [33mvalue[39m=[32m""[39m
        [36m>[39m
          [0mSelect an option[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 1"[39m
          [33mvalue[39m=[32m"option 1"[39m
        [36m>[39m
          [0moption 1[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 2"[39m
          [33mvalue[39m=[32m"option 2"[39m
        [36m>[39m
          [0moption 2[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 3"[39m
          [33mvalue[39m=[32m"option 3"[39m
        [36m>[39m
          [0moption 3[0m
        [36m</option>[39m
      [36m</select>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`select > renders an input select with inline floating label and an id 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"floating-label"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label"[39m
      [33mfor[39m=[32m"select-id"[39m
    [36m>[39m
      [0mOption[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"select"[39m
    [36m>[39m
      [36m<select[39m
        [33mid[39m=[32m"select-id"[39m
      [36m>[39m
        [36m<option[39m
          [33mselected[39m=[32m""[39m
          [33mtext[39m=[32m"Select an option"[39m
          [33mvalue[39m=[32m""[39m
        [36m>[39m
          [0mSelect an option[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 1"[39m
          [33mvalue[39m=[32m"option 1"[39m
        [36m>[39m
          [0moption 1[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 2"[39m
          [33mvalue[39m=[32m"option 2"[39m
        [36m>[39m
          [0moption 2[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 3"[39m
          [33mvalue[39m=[32m"option 3"[39m
        [36m>[39m
          [0moption 3[0m
        [36m</option>[39m
      [36m</select>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`select > renders basic version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"floating-label"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label"[39m
      [33mfor[39m=[32m"s0-select"[39m
    [36m>[39m
      [0mOption[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"select"[39m
    [36m>[39m
      [36m<select[39m
        [33mid[39m=[32m"s0-select"[39m
      [36m>[39m
        [36m<option[39m
          [33mselected[39m=[32m""[39m
          [33mtext[39m=[32m"Select an option"[39m
          [33mvalue[39m=[32m""[39m
        [36m>[39m
          [0mSelect an option[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 1"[39m
          [33mvalue[39m=[32m"option 1"[39m
        [36m>[39m
          [0moption 1[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 2"[39m
          [33mvalue[39m=[32m"option 2"[39m
        [36m>[39m
          [0moption 2[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 3"[39m
          [33mvalue[39m=[32m"option 3"[39m
        [36m>[39m
          [0moption 3[0m
        [36m</option>[39m
      [36m</select>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`select > renders empty 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"floating-label"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label"[39m
      [33mfor[39m=[32m"s0-select"[39m
    [36m>[39m
      [0mOption[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"select"[39m
    [36m>[39m
      [36m<select[39m
        [33mid[39m=[32m"s0-select"[39m
      [36m/>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`select > renders with borderless=true 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"floating-label"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label"[39m
      [33mfor[39m=[32m"s0-select"[39m
    [36m>[39m
      [0mOption[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"select select--borderless"[39m
    [36m>[39m
      [36m<select[39m
        [33mid[39m=[32m"s0-select"[39m
      [36m>[39m
        [36m<option[39m
          [33mselected[39m=[32m""[39m
          [33mtext[39m=[32m"Select an option"[39m
          [33mvalue[39m=[32m""[39m
        [36m>[39m
          [0mSelect an option[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 1"[39m
          [33mvalue[39m=[32m"option 1"[39m
        [36m>[39m
          [0moption 1[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 2"[39m
          [33mvalue[39m=[32m"option 2"[39m
        [36m>[39m
          [0moption 2[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 3"[39m
          [33mvalue[39m=[32m"option 3"[39m
        [36m>[39m
          [0moption 3[0m
        [36m</option>[39m
      [36m</select>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`select > renders with fluid=true 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"floating-label"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label"[39m
      [33mfor[39m=[32m"s0-select"[39m
    [36m>[39m
      [0mOption[0m
    [36m</label>[39m
    [36m<div[39m
      [33mclass[39m=[32m"select select--fluid"[39m
    [36m>[39m
      [36m<select[39m
        [33mid[39m=[32m"s0-select"[39m
      [36m>[39m
        [36m<option[39m
          [33mselected[39m=[32m""[39m
          [33mtext[39m=[32m"Select an option"[39m
          [33mvalue[39m=[32m""[39m
        [36m>[39m
          [0mSelect an option[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 1"[39m
          [33mvalue[39m=[32m"option 1"[39m
        [36m>[39m
          [0moption 1[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 2"[39m
          [33mvalue[39m=[32m"option 2"[39m
        [36m>[39m
          [0moption 2[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 3"[39m
          [33mvalue[39m=[32m"option 3"[39m
        [36m>[39m
          [0moption 3[0m
        [36m</option>[39m
      [36m</select>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`select > renders with second item selected 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"floating-label"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label"[39m
      [33mfor[39m=[32m"s0-select"[39m
    [36m>[39m
      [0mOption[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"select"[39m
    [36m>[39m
      [36m<select[39m
        [33mid[39m=[32m"s0-select"[39m
      [36m>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 0"[39m
          [33mvalue[39m=[32m"0"[39m
        [36m>[39m
          [0moption 0[0m
        [36m</option>[39m
        [36m<option[39m
          [33mselected[39m=[32m""[39m
          [33mtext[39m=[32m"option 1"[39m
          [33mvalue[39m=[32m"1"[39m
        [36m>[39m
          [0moption 1[0m
        [36m</option>[39m
        [36m<option[39m
          [33mtext[39m=[32m"option 2"[39m
          [33mvalue[39m=[32m"2"[39m
        [36m>[39m
          [0moption 2[0m
        [36m</option>[39m
      [36m</select>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--12"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-chevron-down-12"[39m
            [33mviewBox[39m=[32m"0 0 12 12"[39m
          [36m>[39m
            [36m<path[39m
              [33mclip-rule[39m=[32m"evenodd"[39m
              [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
              [33mfill-rule[39m=[32m"evenodd"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-chevron-down-12"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;
